removed position fixed on menu  so that the welcome message can be seen on mobile view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,7 +91,6 @@
         margin: 0;
         padding: 0;
         height: 42px;
-        position: fixed;
         width: 100%;
     }
 
